[package]
name = "rufton"
version = "0.0.1"
edition = "2024"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT"
description = "Rust + Raft + JSON = rufton"
homepage = "https://github.com/sile/rufton"
repository = "https://github.com/sile/rufton"
readme = "README.md"

[dependencies]
mio = { version = "1.1.1", default-features=false, features = ["os-poll", "net"] }
nojson = "0.3.6"
noraft = "0.3.0"

[dev-dependencies]
noargs = "0.4.2"
rand = "0.9.2"
tempfile = "3.24.0"
